Working code with invite functionality